<resources>
  <plurals name="delete_title">
    <item quantity="one">%d item selected</item>
    <item quantity="other">%d items selected</item>
  </plurals>
  <string name="app_name" translatable="false">Password Store</string>
  <string name="action_settings">Settings</string>
  <string name="dialog_delete_title">Directory already exists</string>
  <string name="dialog_delete_msg">Target directory already exists. Current version only supports a single store. Do you want to delete the current password store directory?\n(%1$s)</string>
  <string name="dialog_delete">Delete directory</string>
  <string name="dialog_do_not_delete">Cancel</string>
  <string name="title_activity_git_clone">Repository information</string>
  <string name="title_activity_git_config">Git configuration</string>
  <string name="title_activity_git_log">Commit log</string>
  <string name="creation_dialog_text">Please clone or create a new repository below before trying to add a password or running any synchronisation operation.</string>
  <plurals name="delete_dialog_text">
    <item quantity="one">Are you sure you want to delete the selected item?</item>
    <item quantity="other">Are you sure you want to delete the %d selected items?</item>
  </plurals>
  <string name="delete_directory_progress_text">Deleting…</string>
  <string name="move">Move</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="error">Error</string>
  <string name="password_exists_title">Password already exists!</string>
  <string name="password_exists_message">This will overwrite %1$s with %2$s.</string>
  <string name="password_move_error_title">Error while moving passwords</string>
  <string name="password_move_error_message">Failed to move %1$s to %2$s</string>
  <string name="git_commit_add_text">Add generated password for %1$s using Android Password Store.</string>
  <string name="git_commit_edit_text">Edit password for %1$s using Android Password Store.</string>
  <string name="git_commit_remove_text">Remove %1$s from store.</string>
  <string name="git_commit_move_text">Rename %1$s to %2$s.</string>
  <string name="git_commit_move_multiple_text">Move multiple passwords to %1$s.</string>
  <string name="git_commit_gpg_id">Initialise PGP IDs in %1$s.</string>
  <string name="clipboard_copied_text">Copied to clipboard.</string>
  <string name="file_toast_text">Please provide a file name.</string>
  <string name="empty_toast_text">You need to fill in at least a password or some extra content.</string>
  <string name="jgit_error_dialog_title">An error occurred during a Git operation</string>
  <string name="ssh_preferences_dialog_title">Set up authentication key</string>
  <string name="ssh_preferences_dialog_text">Public-key authentication requires a PGP or SSH key. These can be generated within the app or imported from a file.</string>
  <string name="button_label_import">Import SSH key</string>
  <string name="ssh_preferences_dialog_generate">Generate SSH key</string>
  <string name="ssh_preferences_dialog_pgp_key">Select a PGP key</string>
  <string name="passphrase_dialog_title">Authenticate</string>
  <string name="passphrase_dialog_text">Please provide the passphrase for your authentication key.</string>
  <string name="password_dialog_text">Please provide the password for this repository.</string>
  <string name="server_url">Repository URL</string>
  <string name="connection_mode">Authentication method</string>
  <string name="git_user_name_hint">Username</string>
  <string name="git_user_email">Email</string>
  <string name="invalid_email_dialog_text">Please enter a valid email address.</string>
  <string name="clone_button">Clone</string>
  <string name="crypto_name_hint">Name</string>
  <string name="crypto_username_hint">Username</string>
  <string name="crypto_pass_label">Password</string>
  <string name="crypto_extra_label">Extra content</string>
  <string name="crypto_encrypt_username_label">Encrypt username</string>
  <string name="crypto_select">Select</string>
  <string name="crypto_save">Save</string>
  <string name="crypto_save_and_copy">Save and Copy</string>
  <string name="action_search">Search</string>
  <string name="password">Password</string>
  <string name="username">Username</string>
  <string name="otp_label_format">OTP (expires in %ds)</string>
  <string name="edit_password">Edit password</string>
  <string name="copy_password">Copy password</string>
  <string name="share_as_plaintext">Share as plaintext</string>
  <string name="pref_category_repository_title">Repository</string>
  <string name="pref_edit_git_server_settings">Git server settings</string>
  <string name="pref_git_server_auth_key">Authentication key</string>
  <string name="pref_edit_git_config">Local Git config &amp; utilities</string>
  <string name="pref_ssh_use_pgp_key_title">Use PGP key</string>
  <string name="pref_ssh_keygen_title">Generate SSH key pair</string>
  <string name="pref_import_ssh_key_title">Import SSH key</string>
  <string name="pref_ssh_see_key_title">View public key</string>
  <string name="pref_git_delete_repo_title">Delete repository</string>
  <string name="pref_dialog_delete_title">Clear repository</string>
  <string name="pref_category_general_title">General</string>
  <string name="pref_category_passwords_title">Passwords</string>
  <string name="pref_biometrics_and_pin_timeout_title">Validity period (in days) of biometrics/PIN</string>
  <string name="pref_biometrics_and_pin_timeout_summary">After expiry, you will need to re-enter the PGP passphrase. 0 means forever. Current value: %1$s</string>
  <string name="pref_clipboard_timeout_title">Password copy timeout</string>
  <string name="pref_clipboard_timeout_summary">Set the time (in seconds) you want the password to stay in the clipboard. 0 means forever. Current value: %1$s</string>
  <string name="pref_copy_title">Automatically copy password</string>
  <string name="pref_copy_summary">Automatically copy the password to the clipboard after decryption was successful.</string>
  <string name="ssh_key_import_error_not_an_ssh_key_message">The selected file does not appear to be an SSH private key.</string>
  <string name="ssh_use_pgp_key_error_no_authkey_message">The selected PGP key does not provide an authentication-capable subkey.</string>
  <string name="ssh_use_pgp_key_error_unlocking_from_keystore_message">Error unlocking authentication key from the Android Keystore.</string>
  <string name="ssh_use_pgp_key_error_unlocking_wrapped_ed25519_message">Error unlocking authentication key.</string>
  <string name="ssh_use_pgp_key_error_unlocking_pgp_auth_subkey_message">Error unlocking authentication subkey from PGP key.</string>
  <string name="ssh_key_success_dialog_title">SSH-key imported</string>
  <string name="ssh_key_error_dialog_title">Key import error</string>
  <string name="ssh_key_error_dialog_text">Message : \n</string>
  <string name="pref_recursive_filter_title">Recursive filtering</string>
  <string name="pref_recursive_filter_summary">Recursively find passwords of the current directory.</string>
  <string name="pref_directory_structure">Password file organisation</string>
  <string name="pref_sort_order_title">Password sort order</string>
  <string name="pref_folder_first_sort_order">Folders first</string>
  <string name="pref_file_first_sort_order">Files first</string>
  <string name="pref_type_independent_sort_order">Type independent</string>
  <string name="pref_recently_used_sort_order">Recently used</string>
  <string name="pref_category_autofill_title">Autofill</string>
  <string name="pref_autofill_enable_title">Enable Autofill</string>
  <string name="pref_category_misc_title">Misc</string>
  <string name="pref_category_passkey_title">Passkeys</string>
  <string name="pref_passkey_signature_counter_policy_title">Zero signature counter (recommended for synced repos)</string>
  <string name="pref_passkey_signature_counter_policy_summary">Always reports counter = 0 to websites, preventing Git merge conflicts across devices. Trade-off: websites cannot detect if your passkey was cloned to another device. Disable only for local-only (non-synced) repositories to enable monotonic counter with clone detection.</string>
  <string name="pref_passkey_auto_git_sync_title">Auto Git sync</string>
  <string name="pref_passkey_auto_git_sync_summary">Automatically sync passkeys with Git remote when repository is configured.</string>
  <string name="pref_clear_clipboard_title">Scramble clipboard history</string>
  <string name="pref_clear_clipboard_summary">Flood clipboard history (Samsung devices, Gboard) with random numbers, wiping out any passwords.</string>
  <string name="pref_git_delete_repo_summary">Deletes local (hidden) repository.</string>
  <string name="prefs_export_passwords_title">Export repository</string>
  <string name="prefs_export_passwords_summary">Exports the password repository to an external directory.</string>
  <string name="prefs_export_passwords_dialog_title">Exporting passwords</string>
  <string name="prefs_export_passwords_dialog_message">Please wait…</string>
  <string name="prefs_import_passwords_title">Import repository</string>
  <string name="prefs_import_passwords_summary">Imports a password repository from an external directory.</string>
  <string name="prefs_import_passwords_dialog_title">Importing passwords</string>
  <string name="prefs_repo_not_empty_dialog_title">Local repository not empty</string>
  <string name="prefs_repo_not_empty_dialog_summary">The local password repository must be deleted first.</string>
  <string name="prefs_repo_invalid_source_dialog_title">Source directory unusable</string>
  <string name="prefs_repo_invalid_source_dialog_summary">The source directory does not appear to be a valid Git repository: missing .git folder.</string>
  <string name="pref_rebase_on_pull_title">Rebase on pull</string>
  <string name="pref_rebase_on_pull_summary">When pulling or syncing, create a merge commit with upstream changes.</string>
  <string name="pref_rebase_on_pull_summary_on">When pulling or syncing, rebase local commits on the top of the remote repository\'s history. (Recommended)</string>
  <string name="pref_disable_sync_on_pull_title">Disable swipe gesture</string>
  <string name="pref_disable_sync_on_pull_summary">Prevent swiping down on the password list from triggering a Git sync.</string>
  <string name="pref_import_pgp_key_title">Import PGP key</string>
  <string name="pref_pgp_key_manager_title">Key manager</string>
  <string name="pref_pgp_ascii_armor_title">Encrypt in ASCII armor mode</string>
  <string name="pref_pgp_key_manager_export">Backup/Export</string>
  <string name="pref_pgp_key_manager_export_public">Export public key</string>
  <string name="pref_pgp_key_manager_change_passphrase">Change passphrase</string>
  <string name="pwgen_title">Generate password</string>
  <string name="pwgen_generate">Generate</string>
  <string name="pwgen_include">Include</string>
  <string name="pwgen_length">Length</string>
  <string name="pwgen_numerals">Numerals</string>
  <string name="pwgen_symbols">Symbols</string>
  <string name="pwgen_uppercase">Uppercase</string>
  <string name="pwgen_lowercase">Lowercase</string>
  <string name="pwgen_ambiguous">Ambiguous</string>
  <string name="pwgen_pronounceable">Pronounceable</string>
  <string name="pwgen_no_chars_error">No characters included</string>
  <string name="pwgen_length_too_short_error">Length too short for selected criteria</string>
  <string name="ssh_keygen_passphrase">Passphrase</string>
  <string name="ssh_keygen_repeat_passphrase">Repeat passphrase</string>
  <string name="pgp_full_name_hint">Full name</string>
  <string name="pgp_email_hint">Email</string>
  <string name="pgp_old_passphrase">Current passphrase</string>
  <string name="pgp_new_passphrase">New passphrase</string>
  <string name="pgp_new_passphrase_repeated">Repeat new passphrase</string>
</resources>