<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2014-2026 The Android Password Store Authors. All Rights Reserved.
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="false"
  tools:context="app.passwordstore.ui.pgp.PGPKeyChangePassphraseActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
      android:id="@+id/userid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_margin="8dp"
      android:textIsSelectable="false"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <Spinner
      android:id="@+id/key_spinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:enabled="true"
      android:clickable="true"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/userid" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/old_passphrase_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_margin="8dp"
      android:visibility="gone"
      android:hint="@string/pgp_old_passphrase"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/key_spinner">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/old_passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:nextFocusForward="@id/passphrase" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/passphrase_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:hint="@string/pgp_new_passphrase"
      app:errorTextAppearance="@style/ErrorTextAppearance"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/old_passphrase_input_layout">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:nextFocusForward="@id/repeat_passphrase" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/repeat_passphrase_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:hint="@string/pgp_new_passphrase_repeated"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/passphrase_input_layout">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repeat_passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
